# Event-Go-BJ

./: .gitignore  readme.md
Backend/: .env.example  .replit  README.md  main.py  manage.py  openapi.yaml  pyproject.toml  requirements.txt
Backend/.local/state/replit/agent/filesystem/: filesystem_state.json
Backend/apps/dashboards/: serializers.py  urls.py  views.py
Backend/apps/events/: models.py  serializers.py  tests.py  urls.py  views.py
Backend/apps/events/migrations/: 0001_initial.py
Backend/apps/notifications/: models.py  serializers.py  services.py  urls.py  views.py
Backend/apps/payments/: models.py  serializers.py  services.py  urls.py  views.py
Backend/apps/payments/migrations/: 0001_initial.py
Backend/apps/tickets/: models.py  serializers.py  tests.py  urls.py  views.py
Backend/apps/tickets/migrations/: 0001_initial.py
Backend/apps/users/: models.py  serializers.py  tests.py  urls.py  views.py
Backend/apps/users/migrations/: 0001_initial.py  0002_alter_user_username.py
Backend/attached_assets/: Pasted-Tu-es-un-assistant-expert-en-d-veloppement-backend-avec-Django-REST-Framework-Ta-mission-g-n-re-1756714746368_1756714746369.txt
Backend/eventgo/: asgi.py  settings.py  urls.py  wsgi.py
Frontend/: index.html  package-lock.json  package.json  tailwind.config.js
Frontend/src/: App.tsx  index.css
Frontend/src/components/: EventCard.tsx  LoadingSpinner.tsx  Navbar.tsx  ProtectedRoute.tsx  QRCodeDisplay.tsx
Frontend/src/hooks/: useAuth.tsx
Frontend/src/pages/: AdminDashboard.tsx  CreateEventPage.tsx  CreateTicketPage.tsx  HomePage.tsx  (+7 more)
(+6 files in other folders)
